# pytmatrix

./: meson.build  pyproject.toml
pytmatrix/: psd.py  radar.py  refractive.py  tmatrix.py  tmatrix_psd.py
pytmatrix/test/: test_tmatrix.py
